--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=248eadf648892c03af810a59e8e6fb54
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
